# sql-fastapi

./: README.md  pyproject.toml  sql_app.db
tests/: test_sql_fastapi.py
